ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/Grantees__c.object-meta.xml
<CustomObject>
    <label>Grantees</label>
    <nameField>
        <label>Grant #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grantees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>