ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Article_1_Link__c.field-meta.xml
<CustomField>
    <fullName>Article_1_Link__c</fullName>
    <label>Article 1 Link</label>
    <type>Url</type>
</CustomField>