ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Article_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Article_1_Name__c</fullName>
    <label>Article 1 Name</label>
    <type>TextArea</type>
</CustomField>