ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/CEO_s_Approval_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>CEO_s_Approval_Decline_Reason__c</fullName>
    <label>CEO&apos;s Approval/Decline Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>