ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/CEO_s_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>CEO_s_Approval_Status__c</fullName>
    <label>CEO&apos;s Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>