ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Check_In_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Call_Notes__c</fullName>
    <description>Notes from mid-year check in call.</description>
    <label>Check-In Call Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>