ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Check_In_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Conducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check In Conducted</label>
    <type>Checkbox</type>
</CustomField>