ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Check_Memo__c.field-meta.xml
<CustomField>
    <fullName>Check_Memo__c</fullName>
    <description>Check Memo</description>
    <label>Check Memo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>