ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Completed_Grant_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Completed_Grant_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Grant Agreement</label>
    <type>Checkbox</type>
</CustomField>