ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Considerations__c.field-meta.xml
<CustomField>
    <fullName>Considerations__c</fullName>
    <label>Considerations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>