ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Contact_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_Address__c</fullName>
    <formula>TRIM( IF( NOT( ISBLANK(Grantee_Contact_1__r.MailingCity)),  Grantee_Contact_1__r.MailingCity &amp; &quot;,&quot; , &quot;&quot;) &amp; &quot; &quot; &amp; Grantee_Contact_1__r.MailingState &amp; &quot; &quot; &amp;  Grantee_Contact_1__r.MailingPostalCode )</formula>
    <inlineHelpText>TRIM( IF( NOT( ISBLANK(Grantee_Contact_1__r.MailingCity)),Grantee_Contact_1__r.MailingCity&amp; &quot;,&quot;,&quot;&quot;) &amp; &quot; &quot; &amp;Grantee_Contact_1__r.MailingState&amp; &quot; &quot; &amp; Grantee_Contact_1__r.MailingPostalCode)---old</inlineHelpText>
    <label>Contact Mailing Address</label>
    <type>Text</type>
</CustomField>