ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Contact_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_Country__c</fullName>
    <formula>TRIM( IF( NOT( ISBLANK( Grantee_Contact_1__r.MailingCountry ) ) , Grantee_Contact_1__r.MailingCountry, &quot; &quot;) )</formula>
    <label>Contact Mailing Country</label>
    <type>Text</type>
</CustomField>