ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Contact_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_Street__c</fullName>
    <formula>TRIM( IF( NOT( ISBLANK(Grantee_Contact_1__r.MailingStreet)),Grantee_Contact_1__r.MailingStreet , &quot;&quot;))</formula>
    <label>Contact Mailing Street</label>
    <type>Text</type>
</CustomField>