ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Counties_Served__c.field-meta.xml
<CustomField>
    <fullName>Counties_Served__c</fullName>
    <label>Counties Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alameda</fullName>
            </value>
            <value>
                <fullName>Alpine</fullName>
            </value>
            <value>
                <fullName>Amador</fullName>
            </value>
            <value>
                <fullName>Butte</fullName>
            </value>
            <value>
                <fullName>Calaveras</fullName>
            </value>
            <value>
                <fullName>Colusa</fullName>
            </value>
            <value>
                <fullName>Contra Costa</fullName>
            </value>
            <value>
                <fullName>Del Norte</fullName>
            </value>
            <value>
                <fullName>El Dorado</fullName>
            </value>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Glenn</fullName>
            </value>
            <value>
                <fullName>Humboldt</fullName>
            </value>
            <value>
                <fullName>Imperial</fullName>
            </value>
            <value>
                <fullName>Inyo</fullName>
            </value>
            <value>
                <fullName>Kern</fullName>
            </value>
            <value>
                <fullName>Kings</fullName>
            </value>
            <value>
                <fullName>Lake</fullName>
            </value>
            <value>
                <fullName>Lassen</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Madera</fullName>
            </value>
            <value>
                <fullName>Marin</fullName>
            </value>
            <value>
                <fullName>Mariposa</fullName>
            </value>
            <value>
                <fullName>Mendocino</fullName>
            </value>
            <value>
                <fullName>Merced</fullName>
            </value>
            <value>
                <fullName>Modoc</fullName>
            </value>
            <value>
                <fullName>Mono</fullName>
            </value>
            <value>
                <fullName>Monterey</fullName>
            </value>
            <value>
                <fullName>Napa</fullName>
            </value>
            <value>
                <fullName>Nevada</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>