ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/County_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>County_Service_Area__c</fullName>
    <label>County Service Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alameda</fullName>
            </value>
            <value>
                <fullName>Bay Area</fullName>
            </value>
            <value>
                <fullName>Central Coast</fullName>
            </value>
            <value>
                <fullName>Central Valley</fullName>
            </value>
            <value>
                <fullName>Contra Costa</fullName>
            </value>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Imperial County</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Kern</fullName>
            </value>
            <value>
                <fullName>Kings</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Madera</fullName>
            </value>
            <value>
                <fullName>Marin</fullName>
            </value>
            <value>
                <fullName>Merced</fullName>
            </value>
            <value>
                <fullName>Monterey</fullName>
            </value>
            <value>
                <fullName>Napa</fullName>
            </value>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>Orange County</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Riverside</fullName>
            </value>
            <value>
                <fullName>Sacramento</fullName>
            </value>
            <value>
                <fullName>San Benito</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>San Joaquin</fullName>
            </value>
            <value>
                <fullName>San Mateo</fullName>
            </value>
            <value>
                <fullName>Santa Barbara</fullName>
            </value>
            <value>
                <fullName>Santa Clara</fullName>
            </value>
            <value>
                <fullName>Santa Cruz</fullName>
            </value>
            <value>
                <fullName>Solano</fullName>
            </value>
            <value>
                <fullName>Sonoma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>