ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Current_Annual_Budget__c.field-meta.xml
<CustomField>
    <fullName>Current_Annual_Budget__c</fullName>
    <label>Current Annual Budget</label>
    <type>TextArea</type>
</CustomField>