ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <description>Approved Date</description>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>