ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Grantee_Contact_1__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>