ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Final_Report_Completed__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Report Submitted</label>
    <type>Checkbox</type>
</CustomField>