ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Final_Report_Due__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Due__c</fullName>
    <inlineHelpText>Report Due Date</inlineHelpText>
    <label>Final Report Due</label>
    <type>Date</type>
</CustomField>