ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Final_Report_Due_old__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Due_old__c</fullName>
    <formula>IF( No_Reporting_Requirements__c =False, IF( ISBLANK(Grant_End_Date__c),&quot;&quot;,(LPAD(TEXT(MONTH(Grant_End_Date__c  + 30)),2,&quot;0&quot;) + &quot;/&quot; +
LPAD(TEXT(DAY(Grant_End_Date__c  + 30)   ),2,&quot;0&quot;) + &quot;/&quot; +
RIGHT(TEXT(YEAR( Grant_End_Date__c  + 30)),4))),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Report Due-old</label>
    <type>Text</type>
</CustomField>