ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Mailing_City__c</fullName>
    <formula>TRIM( IF( NOT( ISBLANK( Grantee_Organization__r.Parent.BillingCity )),  Grantee_Organization__r.Parent.BillingCity  &amp; &quot;,&quot; , &quot;&quot;) &amp; &quot; &quot; &amp; Grantee_Organization__r.Parent.BillingState  &amp; &quot; &quot; &amp;   Grantee_Organization__r.Parent.BillingPostalCode  )</formula>
    <label>Fiscal Mailing City</label>
    <type>Text</type>
</CustomField>