ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Mailing_Country__c</fullName>
    <formula>TRIM( IF( NOT( ISBLANK(Grantee_Organization__r.Parent.npe01__One2OneContact__r.MailingCountry ) ) , Grantee_Organization__r.Parent.npe01__One2OneContact__r.MailingCountry , &quot; &quot;) )</formula>
    <label>Fiscal Mailing Country</label>
    <type>Text</type>
</CustomField>