ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Mailing_Street__c</fullName>
    <formula>TRIM( IF( NOT( ISBLANK( Grantee_Organization__r.Parent.BillingStreet  )),Grantee_Organization__r.Parent.BillingStreet , &quot;&quot;))</formula>
    <label>Fiscal Mailing Street</label>
    <type>Text</type>
</CustomField>