ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsor__c</fullName>
    <formula>Grantee_Organization__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Sponsor</label>
    <type>Text</type>
</CustomField>