ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Sponsor_Address__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsor_Address__c</fullName>
    <formula>Grantee_Organization__r.Parent.BillingStreet  &amp; BR() &amp;  Grantee_Organization__r.Parent.BillingCity &amp; 
 &quot;,&quot; &amp; &quot; &quot; &amp; Grantee_Organization__r.Parent.BillingState &amp; &quot; &quot; &amp; Grantee_Organization__r.Parent.BillingPostalCode &amp; BR() &amp;
Grantee_Organization__r.Parent.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Sponsor Address</label>
    <type>Text</type>
</CustomField>