ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Sponsor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Fiscal Sponsor Key Contact</inlineHelpText>
    <label>Fiscal Sponsor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Grantees (Fiscal Sponsor Contact)</relationshipLabel>
    <relationshipName>Grantees2</relationshipName>
    <type>Lookup</type>
</CustomField>