ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Sponsor_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsor_Contact_ID__c</fullName>
    <formula>IF (Grantee_Organization__r.Parent.npe01__One2OneContact__r.Id&lt;&gt;&quot;&quot;,Grantee_Organization__r.Parent.npe01__One2OneContact__r.Id, Fiscal_Sponsor_Contact__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Sponsor Contact ID</label>
    <type>Text</type>
</CustomField>