ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Sponsor_EIN__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsor_EIN__c</fullName>
    <formula>Grantee_Organization__r.Parent.EIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Sponsor EIN</label>
    <type>Text</type>
</CustomField>