ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Sponsor_Key_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsor_Key_Contact_Email__c</fullName>
    <formula>Fiscal_Sponsor_Contact__r.Email</formula>
    <label>Fiscal Sponsor Key Contact Email</label>
    <type>Text</type>
</CustomField>