ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Sponsor_Key_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsor_Key_Contact_Name__c</fullName>
    <formula>Fiscal_Sponsor_Contact__r.FirstName &amp;&quot; &quot;&amp; Fiscal_Sponsor_Contact__r.LastName</formula>
    <label>Fiscal Sponsor Key Contact Name</label>
    <type>Text</type>
</CustomField>