ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Fiscal_Sponsor_Key_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsor_Key_Contact_Title__c</fullName>
    <formula>Fiscal_Sponsor_Contact__r.Title</formula>
    <label>Fiscal Sponsor Key Contact Title</label>
    <type>Text</type>
</CustomField>