ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/FiscalSponsor_KeyContact_Phone__c.field-meta.xml
<CustomField>
    <fullName>FiscalSponsor_KeyContact_Phone__c</fullName>
    <formula>Fiscal_Sponsor_Contact__r.Phone</formula>
    <label>FiscalSponsor Key Contact Phone</label>
    <type>Text</type>
</CustomField>