ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Full_Time_Staff__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Staff__c</fullName>
    <label>Full-Time Staff</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>