ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Funding_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Funding_Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Funding Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Grant</relationshipLabel>
    <relationshipName>Grantees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>