ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opportunity__c</fullName>
    <label>Funding Opportunity</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>