ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Funding_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Funding_Priorities__c</fullName>
    <formula>Funding_Campaign__r.Funding_Priorities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Priorities</label>
    <type>Text</type>
</CustomField>