ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Source</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Grantees</relationshipLabel>
    <relationshipName>Grantees</relationshipName>
    <type>Lookup</type>
</CustomField>