ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Generate_GA_Contract__c.field-meta.xml
<CustomField>
    <fullName>Generate_GA_Contract__c</fullName>
    <formula>&quot;&amp;id=&quot;+ Id +
&quot;&amp;Qvar0ID=a1S1Y00000K5KTeUAN&quot;+
&quot;&amp;templateid=a1a1Y00000YTJFiQAP,{qvar0}&quot;+
&quot;&amp;defaultPDF=0&quot;+ 
&quot;&amp;ofn=&quot;+ Name+
&quot;&amp;QMode=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate GA Contract</label>
    <type>Text</type>
</CustomField>