ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Giving_Circle__c.field-meta.xml
<CustomField>
    <fullName>Giving_Circle__c</fullName>
    <label>Giving Circle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Coast Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Central Valley Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Cisco Conexion Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Contra Costa Latinx Giving Circle</fullName>
            </value>
            <value>
                <fullName>Dropbox Latinx Giving Circle</fullName>
            </value>
            <value>
                <fullName>East Bay Men&apos;s Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>East Bay Women&apos;s Latina Giving Circle</fullName>
            </value>
            <value>
                <fullName>Inland Empire Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Kern County Giving Circle</fullName>
            </value>
            <value>
                <fullName>KPLA Latinx Giving Circle</fullName>
            </value>
            <value>
                <fullName>Latinos in Tech Giving Circle</fullName>
            </value>
            <value>
                <fullName>LGBTQ Latinx Giving Circle</fullName>
            </value>
            <value>
                <fullName>Los Angeles Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Merced Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Orange County Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Peninsula Latina Giving Circle</fullName>
            </value>
            <value>
                <fullName>Pleasanton Latina Giving Circle</fullName>
            </value>
            <value>
                <fullName>Sacramento Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>San Diego Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>San Francisco Men&apos;s Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>San Francisco Women&apos;s Latina Giving Circle</fullName>
            </value>
            <value>
                <fullName>Silicon Valley Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Solano Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>South Bay Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Stanislaus Community Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Tulare County Latino Giving Circle</fullName>
            </value>
            <value>
                <fullName>Wine Country Latino Giving Circle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>