ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grant_Activities__c.field-meta.xml
<CustomField>
    <fullName>Grant_Activities__c</fullName>
    <description>Summary of grant activities.</description>
    <label>Grant Activities</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>