ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grant_Amount__c</fullName>
    <label>Grant Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>