ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grant_Duration__c.field-meta.xml
<CustomField>
    <fullName>Grant_Duration__c</fullName>
    <formula>IF( (Grant_End_Date__c  -  Grant_Start_Date__c) / 365 * 12 &lt; 1 , 1, (Grant_End_Date__c  -  Grant_Start_Date__c) / 365 * 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IF( (Grant_End_Date__c  -  Grant_Start_Date__c) / 365 * 12 &lt; 1 , 1, (Grant_End_Date__c  -  Grant_Start_Date__c) / 365 * 12) -- Testing
(MONTH( Grant_End_Date__c )+ (12*(YEAR(Grant_End_Date__c)-YEAR( Grant_Start_Date__c ))) - MONTH (Grant_Start_Date__c))</inlineHelpText>
    <label>Grant Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>