ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grant_Issue_Area__c.field-meta.xml
<CustomField>
    <fullName>Grant_Issue_Area__c</fullName>
    <label>Grant Issue Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civic Engagement</fullName>
            </value>
            <value>
                <fullName>Youth Empowerment</fullName>
            </value>
            <value>
                <fullName>Leadership Development</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>S.T.E.M</fullName>
            </value>
            <value>
                <fullName>Arts / Culture</fullName>
            </value>
            <value>
                <fullName>Immigrant Rights &amp; Legal Services</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Women &amp; Girls Empowerment</fullName>
            </value>
            <value>
                <fullName>Boys &amp; Men of Color Empowerment</fullName>
            </value>
            <value>
                <fullName>LGBTQ Rights</fullName>
            </value>
            <value>
                <fullName>Capacity Building</fullName>
            </value>
            <value>
                <fullName>Disaster Relief</fullName>
            </value>
            <value>
                <fullName>Economic Empowerment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>