ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grant_Night_Notes__c.field-meta.xml
<CustomField>
    <fullName>Grant_Night_Notes__c</fullName>
    <label>Grants Night Notes</label>
    <type>TextArea</type>
</CustomField>