ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grant_Org_Street__c.field-meta.xml
<CustomField>
    <fullName>Grant_Org_Street__c</fullName>
    <formula>TRIM( IF( NOT( ISBLANK(Grantee_Organization__r.BillingStreet )),Grantee_Organization__r.BillingStreet  , &quot;&quot;))</formula>
    <label>Grant Org Street</label>
    <type>Text</type>
</CustomField>