ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grant_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Grant_Outcome__c</fullName>
    <label>Grant Outcome</label>
    <length>100768</length>
    <type>LongTextArea</type>
</CustomField>