ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grant_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Payment_Date__c</fullName>
    <label>Grant Payment Date</label>
    <type>Date</type>
</CustomField>