ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Operating Support</fullName>
            </value>
            <value>
                <fullName>Core Program Support</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>