ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grantee_Address__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Address__c</fullName>
    <formula>Grantee_Contact_1__r.MailingStreet  + BR() +  
Grantee_Contact_1__r.MailingCity  + &quot;, &quot; +   Grantee_Contact_1__r.MailingState  + &quot;. &quot; +
 Grantee_Contact_1__r.MailingPostalCode + BR() +   Grantee_Contact_1__r.MailingCountry</formula>
    <label>Grantee Address</label>
    <type>Text</type>
</CustomField>