ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grantee_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Contact_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>CEO or Org Director</inlineHelpText>
    <label>Grantee Contact #1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Grantees</relationshipLabel>
    <relationshipName>Grantees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>