ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grantee_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantee Contact #2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Grantees (Grantee Contact #2)</relationshipLabel>
    <relationshipName>Grantees1</relationshipName>
    <type>Lookup</type>
</CustomField>