ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grantee_Contact__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Contact__c</fullName>
    <description>[DO NOT DELETE] - This field is used to pull the grant contact names for email templates</description>
    <formula>IF( AND( Grantee_Contact_1__c &lt;&gt;&quot;&quot;,Grantee_Contact_2__c &lt;&gt;&quot;&quot;) , Grantee_Contact_1__r.FirstName &amp; &quot;,&quot; &amp;&quot; and &quot; &amp; Grantee_Contact_2__r.FirstName &amp; &quot;,&quot; ,  IF(  Grantee_Contact_1__c  &lt;&gt;&quot;&quot;,Grantee_Contact_1__r.FirstName &amp; &quot;,&quot;, Grantee_Contact_2__r.FirstName &amp; &quot;,&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grantee Contact</label>
    <type>Text</type>
</CustomField>