ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grantee_Contact_FS_Contact__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Contact_FS_Contact__c</fullName>
    <description>Grantee Contact and Fiscal Sponsor Contact - used in email templated</description>
    <formula>IF( AND( Grantee_Contact_1__c &lt;&gt;&quot;&quot;,Grantee_Contact_2__c &lt;&gt;&quot;&quot;, Fiscal_Sponsor_Contact__c &lt;&gt;&quot;&quot;) , Grantee_Contact_1__r.FirstName &amp; &quot;, &quot;  &amp; Grantee_Contact_2__r.FirstName &amp; &quot;, and &quot; &amp; Fiscal_Sponsor_Contact__r.FirstName ,IF( AND( Grantee_Contact_1__c &lt;&gt;&quot;&quot;,Grantee_Contact_2__c &lt;&gt;&quot;&quot;) , Grantee_Contact_1__r.FirstName &amp; &quot; and &quot; &amp; Grantee_Contact_2__r.FirstName  ,  IF(  Grantee_Contact_1__c  &lt;&gt;&quot;&quot;,Grantee_Contact_1__r.FirstName, Grantee_Contact_2__r.FirstName ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grantee Contact &amp; FS Contact</label>
    <type>Text</type>
</CustomField>